hphp/hack/test/typecheck/nonnull/accessing_static_method_of_nonnull.php
<?hh

function f(nonnull $x): void {
  $x::foo();
}
